--- a/src/main/resources/templates/addressBooks.html
+++ b/src/main/resources/templates/addressBooks.html
@@ -2,15 +2,15 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>ADDRESS BOOK</title>
-    <meta http-equiv="Content-Type" charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-<h1>Form</h1>
-<form action="#" th:action="@{/addressBooks}" th:object="${buddy}" method="post">
-    <p>Id: <input type="text" th:field="*{name}" /></p>
-    <p>Message: <input type="text" th:field="*{phone}" /></p>
-    <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
-</form>
+    <h1>Form</h1>
+    <!--/*@thymesVar id="buddy" type="BuddyInfo"*/-->
+    <form action="#" th:action="@{/}" th:object="${buddy}" method="post">
+        <p>Name: <input type="text" th:field="*{name}" /></p>
+        <p>Phone: <input type="text" th:field="*{phone}" /></p>
+        <p><input type="submit" value="Submit" /> <input type="reset" value="Reset" /></p>
+    </form>
 </body>
 </html>
